--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                         <li>
 
-                            <a href="../w2/W2D2/w2demo.html">W2D2 Demo</a>
+                            <a href="../SE137/w2/w2lab.html">W2 LAB</a>
 
                         </li>
 
