--- a/index.html
+++ b/index.html
@@ -47,29 +47,10 @@
 
                         <li>
 
-                            <a href="../SE137/w2/w2lab.html">W2 LAB</a>
+                            <a href="w2/w2lab.html">W2 LAB</a>
 
                         </li>
 
-                        <li>
-
-                            <a href="../w2/file-paths-incorrect/index.html">Incorrect File Paths</a>
-
-                        </li>
-
-                        <li>
-
-                            <a href="../w2/file-paths-correct/index.html">Correct File Paths</a>
-
-                        </li>
-
-                        <li>
-
-                            <a href="../w2/W2BIOPAGE/W2-BIO PAGE.html">W#2 | Bio Page</a>
-
-                        </li>
-
-                    </ul>
 
                 </li><!--/ end of Week #2-->
 
