--- a/w3/W3Demo.html
+++ b/w3/W3Demo.html
@@ -9,26 +9,22 @@
 <body>
     <main>
         <header>
+            <h1>MR T</h1>
+            <nav>
+                <a href="#">Featured</a>
+                <a href="#">about</a>
+            </nav>
 
         </header>
-        <nav>
-
-        </nav>
         <section>
-            <article>
-                article
-             </article>
-    
-            <div id="middle">
-                div
-            </div>
-            <aside>
-                aside
-            </aside>
+            <h2>Featured</h2>
+            <img src="th.jpg" alt="MR T">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit repellendus nemo, consequatur minima ratione perferendis reiciendis vitae eligendi ipsa nostrum dolorum officiis dignissimos. Necessitatibus quis obcaecati rem unde enim eius?</p>
         </section>
         <footer>
-            footer
+
         </footer>
+       
     </main>
 </body>
 </html>
