--- a/w3/W3Demo.html
+++ b/w3/W3Demo.html
@@ -22,7 +22,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit repellendus nemo, consequatur minima ratione perferendis reiciendis vitae eligendi ipsa nostrum dolorum officiis dignissimos. Necessitatibus quis obcaecati rem unde enim eius?</p>
         </section>
         <footer>
-
+            <p>TESTING</p>
         </footer>
        
     </main>
