--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                             <a href="w2/w2lab.html">W2 LAB</a>
 
                         </li>
+                    </ul>
 
 
                 </li><!--/ end of Week #2-->
@@ -58,18 +59,8 @@
                     <ul>
 
                         <li>
-                            <a href="w3/W3Multi-Page_Bio/Index.html">Index/Home page</a>
-
+                            <a href="w3/W3Lab.html">W3 LAB-BIO PAGE GRID</a>
                         </li>
-                        
-                        <li>
-                            <a href="w3/W3Multi-Page_Bio/Schooling.html">Schooling page</a>
-                        </li>
-
-                        <li>
-                            <a href="w3/W3Multi-Page_Bio/Hobbies.Html">Hobbies page</a>
-                        </li>
-                    
                      </ul>
 
                 </li><!-----end of week 3 -->
