LAB 4 worked on

--- a/w4/W4lab.html
+++ b/w4/W4lab.html
@@ -5,29 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W4 Lab Assignment</title>
     <link rel="stylesheet" href="stylelab4.css">
+    <script src="https://kit.fontawesome.com/5f5e4fa545.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
         <header>
-
+            <h1>Camp Crystal Lake</h1>
+            <h3>Testing</h3>
+            <div id="icons">
+                <div id="youtube">
+                    <i class="fa-brands fa-youtube fa-2xl"></i>
+                </div>
+                <div id="snapchat">
+                    <i class="fa-brands fa-snapchat fa-2xl"></i>
+                </div>
+                <div id="twitter">
+                    <i class="fa-brands fa-twitter fa-2xl"></i>
+                </div>
+            </div>
         </header>
-        <section>
-            <section>
+        <section id="content">
+            <section id="banner">
+                <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/BANNER.png" alt="Banner of Camp Crystal Lake">
 
             </section>
-            <section>
-
+            <section id="farRight">
+                <div id="campSign">
+                    <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/sign.png" alt="Camp Crystal Lake Sign">
+                </div>
+                <div id="timeline">
+                    <p><b>1979</b> - Pain Burn. Demons in fallen angel nor terror decomposed rotten teeth. Captive Agony deteriorated, fatal or chiling is, grotesque Halloween exorcism, screams exorcism ooze. 
+                    <br>
+                    <br>
+                    <b>1984</b> - Agony deteriorated, fatal or chiling is, grotesque Halloween exorcism, screams exorcism ooze.
+                    <br>
+                    <br>
+                    <br>
+                    <b>2020</b> - Pain Burn. Demons in fallen angel nor terror decomposed rotten teeth. Captive Agony deteriorated, fatal or chiling is, grotesque Halloween exorcism, screams exorcism ooze.
+                    </p>
+                   
+                </div>
+                <div id="underwater">
+                    <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/underwater.png" alt="Underwater">
+                </div>
             </section>
-            <section>
-
+            <section id="right">
+                <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/pennant.png" alt="Pennant">
+                <p>Hair-raising decapitated at est. Death bruises moon torture demons devil or vampire werewolf wind. In horrifying, fear is gnarled murder, ominous eerie Serial killer sinister, with sick chilling agony shaking heart pumping.</p>
             </section>
 
-            <section>
-
+            <section id="left">
+                <div id="poster">
+                     <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/Poster.png" alt="Friday the 13th Poster">
+                </div>
+                <div id="leftcontent">
+                    <h2>30th Anniversary</h2>
+                    <br>
+                    <p>Hair-raising spooky hazardous daring. Drenched scream scared dark. Needles at bowels alarming. Bloodcurdling decomposed zombie in virus scared cat Michael Myers worms. Buried non guts claw and creature hair-raising decapitated at est.</p>
+                    <div id="leftimg">
+                        <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/blueray.png" alt="blueray cover" class="blueray">
+                        <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/Purchase on Amazon $19.99.png" alt="Price on Amazon" class="price">
+                    </div>
+                </div>
             </section>
         </section>
         <footer>
-            
+            <p>FRIDAY THE 13TH Trademark of New Line Productions, Inc.</p>
         </footer>
     </main>
 </body>
