--- a/index.html
+++ b/index.html
@@ -68,17 +68,10 @@
                     <ul>
 
                         <li>
-                            <a href="w4/W4MOVIE/Home.html">Home page</a>
+                            <a href="w4/W4lab.html">W4 Lab Assignment</a>
 
                         </li>
                         
-                        <li>
-                            <a href="w4/W4MOVIE/cast.html">Cast page</a>
-                        </li>
-
-                        <li>
-                            <a href="w4/W4MOVIE/review.html">Review page</a>
-                        </li>
                     
                      </ul>
 
