--- a/w4/W4lab.html
+++ b/w4/W4lab.html
@@ -26,12 +26,12 @@
         </header>
         <section id="content">
             <section id="banner">
-                <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/BANNER.png" alt="Banner of Camp Crystal Lake">
+                <img src="images/BANNER.png" alt="Banner of Camp Crystal Lake">
 
             </section>
             <section id="farRight">
                 <div id="campSign">
-                    <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/sign.png" alt="Camp Crystal Lake Sign">
+                    <img src="images/sign.png" alt="Camp Crystal Lake Sign">
                 </div>
                 <div id="timeline">
                     <p><b>1979</b> - Pain Burn. Demons in fallen angel nor terror decomposed rotten teeth. Captive Agony deteriorated, fatal or chiling is, grotesque Halloween exorcism, screams exorcism ooze. 
@@ -46,25 +46,25 @@
                    
                 </div>
                 <div id="underwater">
-                    <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/underwater.png" alt="Underwater">
+                    <img src="images/underwater.png" alt="Underwater">
                 </div>
             </section>
             <section id="right">
-                <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/pennant.png" alt="Pennant">
+                <img src="images/pennant.png" alt="Pennant">
                 <p>Hair-raising decapitated at est. Death bruises moon torture demons devil or vampire werewolf wind. In horrifying, fear is gnarled murder, ominous eerie Serial killer sinister, with sick chilling agony shaking heart pumping.</p>
             </section>
 
             <section id="left">
                 <div id="poster">
-                     <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/Poster.png" alt="Friday the 13th Poster">
+                     <img src="images/Poster.png" alt="Friday the 13th Poster">
                 </div>
                 <div id="leftcontent">
                     <h2>30th Anniversary</h2>
                     <br>
                     <p>Hair-raising spooky hazardous daring. Drenched scream scared dark. Needles at bowels alarming. Bloodcurdling decomposed zombie in virus scared cat Michael Myers worms. Buried non guts claw and creature hair-raising decapitated at est.</p>
                     <div id="leftimg">
-                        <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/blueray.png" alt="blueray cover" class="blueray">
-                        <img src="C:/Users/andyh/OneDrive/Desktop/SE137/w4/images/Purchase on Amazon $19.99.png" alt="Price on Amazon" class="price">
+                        <img src="images/blueray.png" alt="blueray cover" class="blueray">
+                        <img src="images/Purchase on Amazon $19.99.png" alt="Price on Amazon" class="price">
                     </div>
                 </div>
             </section>
