--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
 
                 <li>Week 5
                     <ul>
-                        <li>
-                        <a href = "w5/w5_form_files/index.html">Birthday Party Registration</a>
-                        </li>
+                        
                     </ul>
 
                 </li><!----end of week 5-->
@@ -89,7 +87,7 @@
                 <li>Week 6
                     <ul>
                         <li>
-                        <a href = "w6/grosspay.html">Javascript Gross Pay calculator</a>
+                        <a href = "w6/W6Lab.html">VS Code Editor</a>
                         </li>
                     </ul>
 
