--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li>Week 7
                     <ul>
                         <li>
-                        <a href = "w7/w7_homework/index.html">JS Pay Form</a>
+                        <a href = "w7/stats/W7Lab.html">W7 Lab</a>
                         </li>
                     </ul>
 
