--- a/w8/practice.html
+++ b/w8/practice.html
@@ -6,7 +6,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="style1.css" rel="stylesheet1">
+    <!--my Css File-->
+    <link rel="stylesheet" href="style1.css">
 
     <title>W8 Practice</title>
 </head>
@@ -18,6 +19,62 @@
             <span class="navbar-brand mb-0 h1">Navbar</span>
         </div>
     </nav>
+    <img src="../w8/images/RandySavage.jpg" class="img-fluid w-100" alt="Randy Savage">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12 bg-danger">
+                <p>Testing</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 bg-primary">
+                <p>Testing</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 bg-danger">
+                <p>Testing</p>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div id="table-width">
+        <table class="table table-bordered border-danger">
+            <thead>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+      <footer class="navbar navbar-expand-lg bg-danger">
+        <div class="container">
+            <span class="navbar-text text-muted">Place sticky footer content here.</span>
+        </div>
+    </footer>
       
     
     <!-- Optional JavaScript -->
