--- a/index.html
+++ b/index.html
@@ -102,20 +102,16 @@
 
                 </li>
                 
-                <li>Week 8
+                <li>Week 10
                     <ul>
                         <li>
-                        <a href = "w8/index.html">JS Arrays and Objects</a>
+                            <a href = "w10/Home.html">Portfolio-Home Page</a>
                         </li>
-                    </ul>
-
-                </li>
-                
-                <li>Week 9
-                    <ul>
                         <li>
-                        <a href = "w9/week9.html">JS Creating Elements</a>
+                            <a href = "w10/Projects.html">Projects</a>
                         </li>
+                        <li>
+                            <a href = "w10/FeaturedProject.html">Featured Project</a>
                     </ul>
                 </li>
             </ul><!--end of main outer list-->
