--- a/w10/Home.html
+++ b/w10/Home.html
@@ -12,6 +12,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
         html, body{
             font-family: "Inter", sans-serif;
+            
         }
 
         .img-photo{
@@ -72,7 +73,7 @@
         <div class="flex flex-col">
             <h3 class="text-2xl text-white ml-36 sm:ml-72 mt-10 sm:mt-0">Socials/Contacts</h3>
             <hr class="bg-white w-80 h-0.5 ml-20 sm:ml-56 mt-2">
-            <div class="flex flex-row justify-center mt-2 mr-14 sm:mr-0">
+            <div class="flex flex-row justify-center mr-10 mt-2">
                 <a href="https://www.instagram.com/andyho14/?hl=en" target="_blank"><img src="../w10/images/instagram.webp" alt="instagram icon" class="w-16 h-16 flex sm:ml-56"></a>
                 <a href="https://www.facebook.com/profile.php?id=100084146138770" target="_blank"><img src="../w10/images/Facebook_icon.svg.png" alt="facebook icon" class="w-16 h-16 ml-5 sm:ml-5"></a>
             </div>
