--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                 <li>Week 10
                     <ul>
                         <li>
-                            <a href = "w10/Home.html">Portfolio-Home Page</a>
+                            <a href = "w10/HomeTesting.html">Portfolio-Home Page</a>
                         </li>
                         <li>
-                            <a href = "w10/Projects.html">Projects</a>
+                            <a href = "w10/Projects1.html">Projects</a>
                         </li>
                         <li>
-                            <a href = "w10/FeaturedProject.html">Featured Project</a>
+                            <a href = "w10/FeaturedProject1.html">Featured Project</a>
                     </ul>
                 </li>
             </ul><!--end of main outer list-->
