--- a/w10/Projects1.html
+++ b/w10/Projects1.html
@@ -54,13 +54,13 @@
             <div class="flex flex-col sm:flex-col bg-card card-width card-height mt-10 sm:mt-0 ml-5 sm:ml-0">
                 <img src="../w10/images/W2BIO.png" alt="W2BIO" class="card-poster h-36 justify-center items-center">
                 <h3 class="text-white heading flex justify-center mt-8"><b>Bio Page V2, 2024</b></h3>
-                <a href="https://se137-a-ho.netlify.app/w2/" target="_blank" class="text-link underline heading flex justify-center text-center mt-5">Link to Project</a>
-                <a href="https://github.com/AndyHo04/SE137/blob/main/w2/w2lab.htm" target="_blank" class="text-link underline heading flex justify-center text-center mt-3">Link to Project on Github</a>
+                <a href="https://se137-a-ho.netlify.app/w2/w2lab" target="_blank" class="text-link underline heading flex justify-center text-center mt-5">Link to Project</a>
+                <a href="https://github.com/AndyHo04/SE137/blob/main/w2/w2lab.html" target="_blank" class="text-link underline heading flex justify-center text-center mt-3">Link to Project on Github</a>
             </div>
             <div class="flex flex-col sm:flex-col bg-card card-width card-height mt-10 sm:mt-0 ml-5 sm:ml-0" >
                 <img src="../w10/images/W3BIO.png" alt="W3BIO" class="w-[191px] h-44 block mx-auto">
                 <h3 class="text-white heading flex justify-center mt-3"><b>Bio Page V3, 2024</b></h3>
-                <a href="https://se137-a-ho.netlify.app/w3/" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
+                <a href="https://se137-a-ho.netlify.app/w3/w3lab" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
                 <a href="https://github.com/AndyHo04/SE137/blob/main/w3/W3Lab.html" target="_blank" class="text-link underline heading flex justify-center text-center mt-3">Link to Project on Github</a>
             </div>
         </div>
@@ -68,19 +68,19 @@
             <div class="flex flex-col sm:flex-col bg-card card-width card-height justify-start ml-5">
                 <img src="../w10/images/Poster.png" alt="W4BIO" class="card-poster h-36 justify-center items-center">
                 <h3 class="text-white heading flex justify-center mt-8"><b>Bio Page V4, 2024</b></h3>
-                <a href="https://se137-a-ho.netlify.app/w4/" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
+                <a href="https://se137-a-ho.netlify.app/w4/w4lab" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
                 <a href="https://github.com/AndyHo04/SE137/blob/main/w4/W4lab.html" target="_blank" class="text-link underline heading flex justify-center mt-3">Link to Project on Github</a>
             </div>
             <div class="flex flex-col sm:flex-col bg-card card-width card-height mt-10 sm:mt-0 ml-5 sm:ml-0">
                 <img src="../w10/images/VSEditor.png" alt="W5BIO" class="card-poster h-36 justify-center items-center">
                 <h3 class="text-white heading flex justify-center mt-8"><b>Bio Page V5, 2024</b></h3>
-                <a href="https://se137-a-ho.netlify.app/w5/" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
+                <a href="https://se137-a-ho.netlify.app/w6/w6lab" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
                 <a href="https://github.com/AndyHo04/SE137/blob/main/w6/W6Lab.html" target="_blank" class="text-link underline heading flex justify-center mt-3">Link to Project on Github</a>
             </div>
             <div class="flex flex-col sm:flex-col bg-card card-width card-height mt-10 sm:mt-0 ml-5 sm:ml-0">
                 <img src="../w10/images/Table.png" alt="W6BIO" class="w-[191px] h-44 block mx-auto">
                 <h3 class="text-white heading flex justify-center mt-3"><b>Bio Page V6, 2024</b></h3>
-                <a href="https://se137-a-ho.netlify.app/w6/" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
+                <a href="https://se137-a-ho.netlify.app/w7/stats/w7lab" target="_blank" class="text-link underline heading flex justify-center mt-5">Link to Project</a>
                 <a href="https://github.com/AndyHo04/SE137/blob/main/w7/stats/W7Lab.html" target="_blank" class="text-link underline heading flex justify-center mt-3">Link to Project on Github</a>
             </div>
         </div>
