--- a/w8/practice.html
+++ b/w8/practice.html
@@ -22,8 +22,8 @@
     <img src="../w8/images/RandySavage.jpg" class="img-fluid w-100" alt="Randy Savage">
     <div class="container mt-5">
         <div class="row ml-5">
-            <div class="col-lg-4 col-md-6 col-sm-12 bg-danger"></div>
-            <div class="col-lg-4 col-md-6 col-sm-12 bg-danger"></div>
+            <div class="col-lg-4 col-md-6 col-sm-12 bg-danger mx-1"></div>
+            <div class="col-lg-4 col-md-6 col-sm-12 bg-danger mx-1"></div>
             <div class="col-lg-4 col-md-6 col-sm-12 bg-danger"></div>
         </div>
     </div>
