--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div id="footer">
 
-            <p>&copy; A Ho | SE111.11 | Winter 2024</p>
+            <p>&copy; A Ho | SE137 | SPRING 2024</p>
 
         </div><!--/ #footer-->
 
